v3.00 beta3 - Not yet released

- ADDED: Controls for altering how long full-resolution burn-in is delayed
- ADDED: System button for dumping system properties to output console

- TWEAK: Dataset chooser displays progress bar while analyzing file pattern
- TWEAK: Dataset chooser jumps to directory specified in file pattern field


v3.00 beta2 - Wednesday, October 27, 2004

- ADDED: Preliminary support for Zeiss LSM and ZVI file formats
- ADDED: Continue work on comprehensive state support in XML format

- FIXED: Mac OS X menu bar behaves much better
- FIXED: Various other bugfixes and improvements


v3.00 beta1 - Wednesday, September 1, 2004

- ADDED: Support for Metamorph STK file format
- ADDED: Support for Olympus Fluoview file format
- ADDED: Support for Openlab LIFF file format (requires QuickTime for Java)
- ADDED: Dimensional collapse transform
- ADDED: Weighted multispectral component mapping transform
- ADDED: Ability to change maximum memory value from the System panel
- ADDED: Ability to change graphical "Look & Feel" from the System panel
- ADDED: Begin work on comprehensive save/restore/undo/redo using OME-CA XML

- FIXED: Tons of bugfixes and improvements

- TWEAK: Switched Windows distribution to ZIP file; no need for an installer
- TWEAK: Windows distribution now defaults to "JGoodies Windows" Look & Feel
- TWEAK: Linux distribution now defaults to "JGoodies Plastic 3D" Look & Feel
- TWEAK: Fixed up all distribution packages

-------------------------------------------------------------------------------
v2.31 - Thursday, July 1, 2004

- ADDED: "Burn" button to force full-resolution burn-in
- ADDED: Automation option to delay burn-in until "Burn" button is pressed
- ADDED: Measurement flags (markers without a fixed dimensional position)

- FIXED: Long delay before first screen dataset is computed

- TWEAK: Switched Windows installer to JSmooth + Inno Setup
- TWEAK: Switched Linux distribution to a simple script file
