@@ -1,5 +1,8 @@
 v3.00 beta3 - Not yet released
 
+- ADDED: Individual control over each data object's color settings
+- ADDED: Transparency settings within data object color settings
+- ADDED: Proper management of multiple data object Z-ordering
 - ADDED: Controls for altering how long full-resolution burn-in is delayed
 - ADDED: System button for dumping system properties to output console
 
